--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "murselsen.com",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
-    "glob": "^11.0.0",
-    "postcss": "^8.4.41",
+    "glob": "^11.0.2",
+    "postcss": "^8.5.3",
     "postcss-sort-media-queries": "^5.2.0",
-    "vite": "^5.4.6"
+    "vite": "^6.3.2"
   },
   "author": "Mürsel <murselsen_35@hotmail.com>",
   "license": "ISC",
