--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "murselsen.com",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist",
-    "live": "vite build --outDir=../live --base=/ && gh-pages --branch=live --dist=./live"
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "devDependencies": {
-    "gh-pages": "^6.3.0",
-    "glob": "^11.0.2",
-    "postcss": "^8.5.3",
-    "postcss-sort-media-queries": "^5.2.0",
-    "vite": "^6.3.2"
-  },
-  "author": "Mürsel <murselsen_35@hotmail.com>",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
-    "remixicon": "^4.6.0",
-    "vite-plugin-full-reload": "^1.2.0",
-    "vite-plugin-html-inject": "^1.1.2"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
+    "remixicon": "^4.6.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.25.0",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "vite": "^6.3.5"
   }
 }
