--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "live": "vite build && gh-pages -d dist -branch live"
+    "live": "vite build && gh-pages -d dist --branch=live"
   },
   "dependencies": {
     "axios": "^1.9.0",
