--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.0",
-    "remixicon": "^4.6.0"
+    "remixicon": "^4.6.0",
+    "super-react-gist": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
