--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "live": "vite build && gh-pages -d dist --branch=live"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.1",
     "axios": "^1.9.0",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.0",
+    "redux-persist": "^6.0.0",
     "remixicon": "^4.6.0",
     "super-react-gist": "^1.1.1"
   },
