--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.1",
     "axios": "^1.9.0",
+    "formik": "^2.4.6",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -22,7 +23,8 @@
     "react-router-dom": "^7.6.0",
     "redux-persist": "^6.0.0",
     "remixicon": "^4.6.0",
-    "super-react-gist": "^1.1.1"
+    "super-react-gist": "^1.1.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
